--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,6 @@
+.toolbar-item, .toolbar-layer {
+  background: url(../imgs/toolbar.png) no-repeat; }
+
 .toolbar {
   position: fixed;
   left: 50%;
@@ -9,12 +12,19 @@
   display: block;
   width: 52px;
   height: 52px;
-  background: url(../imgs/toolbar.png) no-repeat;
   margin-top: 1px;
-  transition: all 1s; }
+  -webkit-transition: background-position 1s;
+  -moz-transition: background-position 1s;
+  -ms-transition: background-position 1s;
+  -o-transition: background-position 1s;
+  transtion: background-position 1s; }
   .toolbar-item:hover .toolbar-layer {
     opacity: 1;
-    filter: alpha(opacity=1);
+    filter: alpha(opacity=100);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
     transform: scale(1); }
 
 .toolbar-item-weixin {
@@ -49,11 +59,22 @@
   bottom: -10px;
   width: 172px;
   height: 172px;
-  background: url(../imgs/toolbar.png) no-repeat;
   opacity: 0;
   filter: alpha(opacity=0);
+  -webkit-transform-origin: 95% 95%;
+  -moz-transform-origin: 95% 95%;
+  -ms-transform-origin: 95% 95%;
+  -o-transform-origin: 95% 95%;
   transform-origin: 95% 95%;
+  -webkit-transform: scale(0.01);
+  -moz-transform: scale(0.01);
+  -ms-transform: scale(0.01);
+  -o-transform: scale(0.01);
   transform: scale(0.01);
-  transition: all 1s; }
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+  transtion: all 1s; }
 
 /*# sourceMappingURL=layout.css.map */
