--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,113 @@
-.toolbar-item, .toolbar-layer {
-  background: url(../imgs/toolbar.png) no-repeat; }
+@charset "UTF-8";
+@font-face {
+  font-family: 'icomoon';
+  src: url("fonts/icomoon.eot?ouw2w3");
+  src: url("fonts/icomoon.eot?ouw2w3#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?ouw2w3") format("truetype"), url("fonts/icomoon.woff?ouw2w3") format("woff"), url("fonts/icomoon.svg?ouw2w3#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
+.icon-align-top:before {
+  content: "\e900"; }
+
+.icon-wechat:before {
+  content: "\e901"; }
+
+.icon-weixin:before {
+  content: "\e901"; }
+
+.icon-chat:before {
+  content: "\e902"; }
+
+.icon-comment:before {
+  content: "\e902"; }
+
+.icon-talk:before {
+  content: "\e902"; }
+
+.icon-mobile:before {
+  content: "\e958"; }
+
+/*
+
+第一种方式：背景图片
+@mixin toolbar-item($pos, $hoverPos) {
+	background-position: 0 $pos;
+	&:hover {
+		background-position: 0 $hoverPos;
+	}
+}
+
+$toolbar-size: 52px;
+.toolbar-item, .toolbar-layer {
+	background: url(../imgs/toolbar.png) no-repeat;
+}
+.toolbar {
+	position: fixed;
+	left: 50%;
+	bottom: 5px;
+	margin-left: -$toolbar-size / 2;
+}
+.toolbar-item {
+	position: relative;
+	display: block;
+	width: $toolbar-size;
+	height: $toolbar-size;
+	margin-top: 1px;
+	@include transition(background-position 1s);
+
+	&:hover {
+		.toolbar-layer {
+			@include opacity(1);
+			@include scale(1);
+		}
+	}
+}
+.toolbar-item-weixin {
+	@include toolbar-item (-798px, -860px);
+	.toolbar-layer {
+		height: 212px;
+		background-position: 0 0;
+	}
+}
+.toolbar-item-feedback {
+	@include toolbar-item (-426px, -488px);
+}
+.toolbar-item-app {
+	@include toolbar-item (-550px, -612px);
+	.toolbar-layer {
+		height: 194px;
+		background-position: 0 -222px;
+	}
+}
+.toolbar-item-top {
+	@include toolbar-item (-674px, -736px);
+}
+.toolbar-layer {
+	position: absolute;
+	right: $toolbar-size - 6;
+	bottom: -10px;
+	width: 172px;
+	height: 172px;
+	@include opacity(0);
+	@include transform-origin(95% 95%);
+	@include scale(0.01);
+	@include transition(all 1s);
+}
+
+*/
+/* 第二种方式：字体图标 */
 .toolbar {
   position: fixed;
   left: 50%;
@@ -12,12 +119,11 @@
   display: block;
   width: 52px;
   height: 52px;
-  margin-top: 1px;
-  -webkit-transition: background-position 1s;
-  -moz-transition: background-position 1s;
-  -ms-transition: background-position 1s;
-  -o-transition: background-position 1s;
-  transtion: background-position 1s; }
+  margin-top: 1px; }
+  .toolbar-item:hover .toolbar-icon {
+    top: -52px; }
+  .toolbar-item:hover .toolbar-text {
+    top: 0; }
   .toolbar-item:hover .toolbar-layer {
     opacity: 1;
     filter: alpha(opacity=100);
@@ -27,38 +133,55 @@
     -o-transform: scale(1);
     transform: scale(1); }
 
-.toolbar-item-weixin {
-  background-position: 0 -798px; }
-  .toolbar-item-weixin:hover {
-    background-position: 0 -860px; }
-  .toolbar-item-weixin .toolbar-layer {
-    height: 212px;
-    background-position: 0 0; }
+.toolbar-btn {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 52px;
+  height: 52px;
+  overflow: hidden; }
 
-.toolbar-item-feedback {
-  background-position: 0 -426px; }
-  .toolbar-item-feedback:hover {
-    background-position: 0 -488px; }
+.toolbar-icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 52px;
+  height: 52px;
+  background-color: #d0d6d9;
+  font-size: 30px;
+  color: #fff;
+  text-align: center;
+  line-height: 52px;
+  -webkit-transition: top 1s;
+  -moz-transition: top 1s;
+  -ms-transition: top 1s;
+  -o-transition: top 1s;
+  transtion: top 1s; }
 
-.toolbar-item-app {
-  background-position: 0 -550px; }
-  .toolbar-item-app:hover {
-    background-position: 0 -612px; }
-  .toolbar-item-app .toolbar-layer {
-    height: 194px;
-    background-position: 0 -222px; }
-
-.toolbar-item-top {
-  background-position: 0 -674px; }
-  .toolbar-item-top:hover {
-    background-position: 0 -736px; }
+.toolbar-text {
+  position: absolute;
+  left: 0;
+  top: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #98a1a6;
+  padding-top: 12px;
+  font-size: 12px;
+  color: #fff;
+  text-align: center;
+  line-height: 52px;
+  -webkit-transition: top 1s;
+  -moz-transition: top 1s;
+  -ms-transition: top 1s;
+  -o-transition: top 1s;
+  transtion: top 1s; }
 
 .toolbar-layer {
   position: absolute;
   right: 46px;
   bottom: -10px;
   width: 172px;
-  height: 172px;
+  background: url(../imgs/toolbar_img.png) no-repeat;
   opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transform-origin: 95% 95%;
@@ -76,5 +199,13 @@
   -ms-transition: all 1s;
   -o-transition: all 1s;
   transtion: all 1s; }
+
+.toolbar-layer-weixin {
+  height: 212px;
+  background-position: 0 0; }
+
+.toolbar-layer-app {
+  height: 212px;
+  background-position: 0 -222px; }
 
 /*# sourceMappingURL=layout.css.map */
