--- a/css/layout.css
+++ b/css/layout.css
@@ -108,6 +108,21 @@ $toolbar-size: 52px;
 
 */
 /* 第二种方式：字体图标 */
+.toolbar-item, .toolbar-btn, .toolbar-icon, .toolbar-text {
+  width: 52px;
+  height: 52px; }
+
+.toolbar-icon, .toolbar-text {
+  position: absolute;
+  left: 0;
+  color: #fff;
+  text-align: center;
+  -webkit-transition: top 1s;
+  -moz-transition: top 1s;
+  -ms-transition: top 1s;
+  -o-transition: top 1s;
+  transtion: top 1s; }
+
 .toolbar {
   position: fixed;
   left: 50%;
@@ -117,8 +132,6 @@ $toolbar-size: 52px;
 .toolbar-item {
   position: relative;
   display: block;
-  width: 52px;
-  height: 52px;
   margin-top: 1px; }
   .toolbar-item:hover .toolbar-icon {
     top: -52px; }
@@ -137,44 +150,21 @@ $toolbar-size: 52px;
   position: absolute;
   left: 0;
   top: 0;
-  width: 52px;
-  height: 52px;
   overflow: hidden; }
 
 .toolbar-icon {
-  position: absolute;
-  left: 0;
   top: 0;
-  width: 52px;
-  height: 52px;
   background-color: #d0d6d9;
   font-size: 30px;
-  color: #fff;
   text-align: center;
-  line-height: 52px;
-  -webkit-transition: top 1s;
-  -moz-transition: top 1s;
-  -ms-transition: top 1s;
-  -o-transition: top 1s;
-  transtion: top 1s; }
+  line-height: 52px; }
 
 .toolbar-text {
-  position: absolute;
-  left: 0;
   top: 52px;
-  width: 52px;
-  height: 52px;
   background-color: #98a1a6;
   padding-top: 12px;
   font-size: 12px;
-  color: #fff;
-  text-align: center;
-  line-height: 52px;
-  -webkit-transition: top 1s;
-  -moz-transition: top 1s;
-  -ms-transition: top 1s;
-  -o-transition: top 1s;
-  transtion: top 1s; }
+  line-height: 1.2; }
 
 .toolbar-layer {
   position: absolute;
