--- a/css/layout.css
+++ b/css/layout.css
@@ -5,7 +5,7 @@
   src: url("fonts/icomoon.eot?ouw2w3#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?ouw2w3") format("truetype"), url("fonts/icomoon.woff?ouw2w3") format("woff"), url("fonts/icomoon.svg?ouw2w3#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"], .toolbar-btn, [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -18,10 +18,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-.icon-align-top:before {
+.icon-align-top:before, .toolbar-item-top .toolbar-btn:before {
   content: "\e900"; }
 
-.icon-wechat:before {
+.icon-wechat:before, .toolbar-item-weixin .toolbar-btn:before {
   content: "\e901"; }
 
 .icon-weixin:before {
@@ -33,95 +33,11 @@
 .icon-comment:before {
   content: "\e902"; }
 
-.icon-talk:before {
+.icon-talk:before, .toolbar-item-feedback .toolbar-btn:before {
   content: "\e902"; }
 
-.icon-mobile:before {
+.icon-mobile:before, .toolbar-item-app .toolbar-btn:before {
   content: "\e958"; }
-
-/*
-
-第一种方式：背景图片
-@mixin toolbar-item($pos, $hoverPos) {
-	background-position: 0 $pos;
-	&:hover {
-		background-position: 0 $hoverPos;
-	}
-}
-
-$toolbar-size: 52px;
-.toolbar-item, .toolbar-layer {
-	background: url(../imgs/toolbar.png) no-repeat;
-}
-.toolbar {
-	position: fixed;
-	left: 50%;
-	bottom: 5px;
-	margin-left: -$toolbar-size / 2;
-}
-.toolbar-item {
-	position: relative;
-	display: block;
-	width: $toolbar-size;
-	height: $toolbar-size;
-	margin-top: 1px;
-	@include transition(background-position 1s);
-
-	&:hover {
-		.toolbar-layer {
-			@include opacity(1);
-			@include scale(1);
-		}
-	}
-}
-.toolbar-item-weixin {
-	@include toolbar-item (-798px, -860px);
-	.toolbar-layer {
-		height: 212px;
-		background-position: 0 0;
-	}
-}
-.toolbar-item-feedback {
-	@include toolbar-item (-426px, -488px);
-}
-.toolbar-item-app {
-	@include toolbar-item (-550px, -612px);
-	.toolbar-layer {
-		height: 194px;
-		background-position: 0 -222px;
-	}
-}
-.toolbar-item-top {
-	@include toolbar-item (-674px, -736px);
-}
-.toolbar-layer {
-	position: absolute;
-	right: $toolbar-size - 6;
-	bottom: -10px;
-	width: 172px;
-	height: 172px;
-	@include opacity(0);
-	@include transform-origin(95% 95%);
-	@include scale(0.01);
-	@include transition(all 1s);
-}
-
-*/
-/* 第二种方式：字体图标 */
-.toolbar-item, .toolbar-btn, .toolbar-icon, .toolbar-text {
-  width: 52px;
-  height: 52px; }
-
-.toolbar-icon, .toolbar-text {
-  position: absolute;
-  left: 0;
-  color: #fff;
-  text-align: center;
-  -webkit-transition: top 1s;
-  -moz-transition: top 1s;
-  -ms-transition: top 1s;
-  -o-transition: top 1s;
-  transtion: top 1s; }
 
 .toolbar {
   position: fixed;
@@ -132,12 +48,14 @@ $toolbar-size: 52px;
 .toolbar-item {
   position: relative;
   display: block;
-  margin-top: 1px; }
-  .toolbar-item:hover .toolbar-icon {
+  margin-top: 1px;
+  width: 52px;
+  height: 52px; }
+  .toolbar-item:hover .toolbar-btn:before {
     top: -52px; }
-  .toolbar-item:hover .toolbar-text {
+  .toolbar-item:hover .toolbar-btn:after {
     top: 0; }
-  .toolbar-item:hover .toolbar-layer {
+  .toolbar-item:hover:after {
     opacity: 1;
     filter: alpha(opacity=100);
     -webkit-transform: scale(1);
@@ -145,57 +63,79 @@ $toolbar-size: 52px;
     -ms-transform: scale(1);
     -o-transform: scale(1);
     transform: scale(1); }
+  .toolbar-item:after {
+    content: "";
+    position: absolute;
+    right: 46px;
+    width: 172px;
+    bottom: -10px;
+    background: url(../imgs/toolbar_img.png) no-repeat;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transform-origin: 95% 95%;
+    -moz-transform-origin: 95% 95%;
+    -ms-transform-origin: 95% 95%;
+    -o-transform-origin: 95% 95%;
+    transform-origin: 95% 95%;
+    -webkit-transform: scale(0.01);
+    -moz-transform: scale(0.01);
+    -ms-transform: scale(0.01);
+    -o-transform: scale(0.01);
+    transform: scale(0.01);
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -ms-transition: all 1s;
+    -o-transition: all 1s;
+    transtion: all 1s; }
 
-.toolbar-btn {
-  position: absolute;
-  left: 0;
-  top: 0;
-  overflow: hidden; }
-
-.toolbar-icon {
-  top: 0;
-  background-color: #d0d6d9;
-  font-size: 30px;
-  text-align: center;
-  line-height: 52px; }
-
-.toolbar-text {
-  top: 52px;
-  background-color: #98a1a6;
-  padding-top: 12px;
-  font-size: 12px;
-  line-height: 1.2; }
-
-.toolbar-layer {
-  position: absolute;
-  right: 46px;
-  bottom: -10px;
-  width: 172px;
-  background: url(../imgs/toolbar_img.png) no-repeat;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transform-origin: 95% 95%;
-  -moz-transform-origin: 95% 95%;
-  -ms-transform-origin: 95% 95%;
-  -o-transform-origin: 95% 95%;
-  transform-origin: 95% 95%;
-  -webkit-transform: scale(0.01);
-  -moz-transform: scale(0.01);
-  -ms-transform: scale(0.01);
-  -o-transform: scale(0.01);
-  transform: scale(0.01);
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
-  transtion: all 1s; }
-
-.toolbar-layer-weixin {
+.toolbar-item-weixin:after {
+  content: "";
   height: 212px;
   background-position: 0 0; }
+.toolbar-item-weixin .toolbar-btn:after {
+  content: "公众\A账号"; }
 
-.toolbar-layer-app {
-  height: 212px;
+.toolbar-item-feedback .toolbar-btn:after {
+  content: "意见\A反馈"; }
+
+.toolbar-item-app:after {
+  content: "";
+  height: 194px;
   background-position: 0 -222px; }
+.toolbar-item-app .toolbar-btn:after {
+  content: "APP\A下载"; }
+
+.toolbar-item-top .toolbar-btn:after {
+  content: "返回\A顶部"; }
+
+.toolbar-btn {
+  top: 0;
+  overflow: hidden;
+  white-space: pre; }
+  .toolbar-btn, .toolbar-btn:before, .toolbar-btn:after {
+    position: absolute;
+    left: 0;
+    width: 52px;
+    height: 52px; }
+  .toolbar-btn:before, .toolbar-btn:after {
+    content: "";
+    color: #fff;
+    text-align: center;
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -ms-transition: all 1s;
+    -o-transition: all 1s;
+    transtion: all 1s; }
+  .toolbar-btn:before {
+    top: 0;
+    background-color: #d0d6d9;
+    font-size: 30px;
+    line-height: 52px; }
+  .toolbar-btn:after {
+    top: 52px;
+    background-color: #98a1a6;
+    font-size: 12px;
+    line-height: 1.2;
+    padding-top: 12px; }
 
 /*# sourceMappingURL=layout.css.map */
