--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,50 +1,5 @@
-@font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ouw2w3');
-  src:  url('fonts/icomoon.eot?ouw2w3#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ouw2w3') format('truetype'),
-    url('fonts/icomoon.woff?ouw2w3') format('woff'),
-    url('fonts/icomoon.svg?ouw2w3#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+@import "mixin";
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-align-top:before {
-  content: "\e900";
-}
-.icon-wechat:before {
-  content: "\e901";
-}
-.icon-weixin:before {
-  content: "\e901";
-}
-.icon-chat:before {
-  content: "\e902";
-}
-.icon-comment:before {
-  content: "\e902";
-}
-.icon-talk:before {
-  content: "\e902";
-}
-.icon-mobile:before {
-  content: "\e958";
-}
 
 @import "mixin";
 @import "toolbar"
