Integration of the code

--- a/css/_toolbar.scss
+++ b/css/_toolbar.scss
@@ -67,8 +67,20 @@ $toolbar-size: 52px;
 
 */
 
-/* 第二种方式：字体图标 */
+/* 第二种方式：字体图标
+
 $toolbar-size: 52px;
+.toolbar-item, .toolbar-btn, .toolbar-icon, .toolbar-text {
+	width: $toolbar-size;
+	height: $toolbar-size;
+}
+.toolbar-icon, .toolbar-text {
+	position: absolute;
+	left: 0;
+	color: #fff;
+	text-align: center;
+	@include transition(top 1s);
+}
 .toolbar {
 	position: fixed;
 	left: 50%;
@@ -78,8 +90,6 @@ $toolbar-size: 52px;
 .toolbar-item {
 	position: relative;
 	display: block;
-	width: $toolbar-size;
-	height: $toolbar-size;
 	margin-top: 1px;
 
 	&:hover {
@@ -99,36 +109,21 @@ $toolbar-size: 52px;
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: $toolbar-size;
-	height: $toolbar-size;
 	overflow: hidden;
 }
 .toolbar-icon {
-	position: absolute;
-	left: 0;
 	top: 0;
-	width: $toolbar-size;
-	height: $toolbar-size;
 	background-color: #d0d6d9;
 	font-size: 30px;
-	color: #fff;
 	text-align: center;
 	line-height: $toolbar-size;
-	@include transition(top 1s);
 }
 .toolbar-text {
-	position: absolute;
-	left: 0;
 	top: $toolbar-size;
-	width: $toolbar-size;
-	height: $toolbar-size;
 	background-color: #98a1a6;
 	padding-top: 12px;
 	font-size: 12px;
-	color: #fff;
-	text-align: center;
-	line-height: $toolbar-size;
-	@include transition(top 1s);
+	line-height: 1.2;
 }
 .toolbar-layer {
 	position: absolute;
@@ -148,4 +143,124 @@ $toolbar-size: 52px;
 .toolbar-layer-app {
 	height: 212px;
 	background-position: 0 -222px;
+}
+ */
+
+/* 第三种方式：利用before和after伪类方式 */
+
+$toolbar-size: 52px;
+.toolbar {
+	position: fixed;
+	left: 50%;
+	bottom: 5px;
+	margin-left: -$toolbar-size / 2;
+
+}
+.toolbar-item {
+	position: relative;
+	display: block;
+	margin-top: 1px;
+	width: $toolbar-size;
+	height: $toolbar-size;
+
+	&:hover {
+		.toolbar-btn {
+			&:before {
+				top: -$toolbar-size;
+			}
+			&:after {
+				top: 0;
+			}
+		}
+		&:after {
+			@include opacity(1);
+			@include scale(1);
+		}
+	}
+	&:after {
+		content: "";
+		position: absolute;
+		right: $toolbar-size - 6;
+		width: 172px;
+		bottom: -10px;
+		background: url(../imgs/toolbar_img.png) no-repeat;
+		@include opacity(0);
+		@include transform-origin(95% 95%);
+		@include scale(0.01);
+		@include transition(all 1s);
+	}
+}
+.toolbar-item-weixin {
+	&:after {
+		content: "";
+		height: 212px;
+		background-position: 0 0;
+	}
+	.toolbar-btn {
+		@extend .icon-wechat;
+		&:after {
+			content: "公众\A账号";
+		}
+	}
+}
+.toolbar-item-feedback {
+	.toolbar-btn {
+		@extend .icon-talk;
+		&:after {
+			content: "意见\A反馈";
+		}
+	}
+}
+.toolbar-item-app {
+	&:after {
+		content: "";
+		height: 194px;
+		background-position: 0 -222px;
+	}
+	.toolbar-btn {
+		@extend .icon-mobile;
+		&:after {
+			content: "APP\A下载";
+		}
+	}
+}
+.toolbar-item-top {
+	.toolbar-btn {
+		@extend .icon-align-top;
+		&:after {
+			content: "返回\A顶部";
+		}
+	}
+}
+.toolbar-btn {
+	&, &:before, &:after {
+		position: absolute;
+		left: 0;	
+		width: $toolbar-size;
+		height: $toolbar-size;
+	}
+	top: 0;
+	overflow: hidden;
+	white-space: pre;
+	@extend [class^="icon-"];
+
+	&:before, &:after {
+		content: "";
+		color: #fff;
+		text-align: center;
+		@include transition(all 1s);
+	}
+	&:before { //icon
+		top: 0;
+		background-color: #d0d6d9;
+		font-size: 30px;
+		line-height: $toolbar-size;
+	}
+	&:after { //text
+		top: $toolbar-size;
+		background-color: #98a1a6;
+		font-size: 12px;
+		line-height: 1.2;
+		padding-top: 12px;
+	}
 }
